--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img src="../alura/Imagens/Logo.png" alt="" class="cabecalho_imagem">
+        <img src="../alura/Imagens/Logo.svg" alt="" class="cabecalho_imagem">
 
     </header>
     <main class="principal">
