--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img src="../alura/Imagens/Logo.svg" alt="" class="cabecalho_imagem">
+        <img src="../alura/Imagens/Logo.svg" alt="Logo do site" class="cabecalho_imagem">
+        <p class="cabecalho_texto"> Segundo Ano A </p>
+        <ul class="cabecalho_menu">
+            <li class="cabecalho_menu-item"> Categorias </li>
+            <li class="cabecalho_menu-item"> Favoritos </li>
+            <li class="cabecalho_menu-item"> Meus Filmes </li>
 
+
+        </ul>
     </header>
     <main class="principal">
 
