--- a/index.html
+++ b/index.html
@@ -8,14 +8,22 @@
 </head>
 <body>
     <header class="cabecalho">
+
+        <div>
         <img src="../alura/Imagens/Logo.svg" alt="Logo do site" class="cabecalho_imagem">
         <p class="cabecalho_texto"> Segundo Ano A </p>
+        <span class="cabecalho_menu-hamburguer"></span>
+        </div>
+
+        <div>
         <ul class="cabecalho_menu">
             <li class="cabecalho_menu-item"> Categorias </li>
             <li class="cabecalho_menu-item"> Favoritos </li>
             <li class="cabecalho_menu-item"> Meus Filmes </li>
         </ul>
-        
+            <p class="cabecalho_texto-2">Meu perfil</p>
+        </div>
+
     </header>
     <main class="principal">
 
