--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="cabecalho">
 
         <div>
-        <img src="../alura/Imagens/Logo.svg" alt="Logo do site" class="cabecalho_imagem">
+        <img src="Imagens/Logo.svg" alt="Logo do site" class="cabecalho_imagem">
         <p class="cabecalho_texto"> Segundo Ano A </p>
         <span class="cabecalho_menu-hamburguer"></span>
         </div>
