--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
 </head>
 <body>
     <header class="cabecalho">
-
         <div>
         <img src="Imagens/Logo.svg" alt="Logo do site" class="cabecalho_imagem">
         <p class="cabecalho_texto"> Segundo Ano A </p>
         <span class="cabecalho_menu-hamburguer"></span>
         </div>
-
         <div>
         <ul class="cabecalho_menu">
             <li class="cabecalho_menu-item"> Categorias </li>
@@ -23,7 +21,10 @@
         </ul>
             <p class="cabecalho_texto-2">Meu perfil</p>
         </div>
-
+        <div>
+            <a href="#"><img src="Imagens/Favoritos.svg" alt="Meus Favoritos" class="container_imagem"></a> 
+            <a href="#"><img src="Imagens/Usuario.svg" alt="Meu perfil" class="container_imagem"></a>
+        </div>
     </header>
     <main class="principal">
 
