--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
   </section>
 
   <section class=”carrossel”>
-    <h2 class="carrossel__titulo">Mais vendidos</h2>
+    <h2 class="carrossel__titulo">Meus filmes de terror favoritos</h2>
 
     <div class="carrossel__container">
       <div class="swiper">
@@ -162,15 +162,15 @@
 
         <div class="swiper-wrapper">
           <!-- Slides -->
-          <div class="swiper-slide"><img src="img/ApacheKafka.svg"
-              alt="Livro sobre apache kafka e spring boot da alura books"></div>
-          <div class="swiper-slide"><img src="img/Liderança.svg" alt="Livro sobre liderança em design da alura books">
+          <div class="swiper-slide"><img src="img/Scream.jpeg"
+              alt="Pânico 1"></div>
+          <div class="swiper-slide"><img src="img/Scream2.jpeg" alt="Pânico 2">
           </div>
-          <div class="swiper-slide"><img src="img/Javascript.svg" alt="Livro sobre javascript assertivo da alurabooks">
+          <div class="swiper-slide"><img src="img/Scream3.jpeg" alt="Pânico 3">
           </div>
-          <div class="swiper-slide"><img src="img/Guia Front-end.svg" alt="Livro Guia front end"></div>
-          <div class="swiper-slide"><img src="img/Portugol.svg" alt="Livro sobre portugol"></div>
-          <div class="swiper-slide"><img src="img/Acessibilidade.svg" alt="livro sobre acessibilidade"></div>
+          <div class="swiper-slide"><img src="img/Scream4.jpeg" alt="Pânico 4"></div>
+          <div class="swiper-slide"><img src="img/Scream5.jpeg" alt="Pânico 5 "></div>
+          <div class="swiper-slide"><img src="img/ScreamVI.jpeg" alt="Pânico 6"></div>
         </div>
 
         <!-- If we need navigation buttons -->
