--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           <!-- Slides -->
           <div class="swiper-slide"><img src="img/Scream.jpeg"
               alt="Pânico 1"></div>
-          <div class="swiper-slide"><img src="img/Scream2.jpeg" alt="Pânico 2">
+          <div class="swiper-slide"><img src="img/scream2.jpg" alt="Pânico 2">
           </div>
           <div class="swiper-slide"><img src="img/Scream3.jpeg" alt="Pânico 3">
           </div>
