--- a/index.html
+++ b/index.html
@@ -164,11 +164,11 @@
           <!-- Slides -->
           <div class="swiper-slide"><img src="img/Scream.jpeg"
               alt="Pânico 1"></div>
-          <div class="swiper-slide"><img src="img/scream2.jpg" alt="Pânico 2">
+          <div class="swiper-slide"><img src="img/Scream2.jpg" alt="Pânico 2">
           </div>
           <div class="swiper-slide"><img src="img/Scream3.jpeg" alt="Pânico 3">
           </div>
-          <div class="swiper-slide"><img src="img/Scream4.jpeg" alt="Pânico 4"></div>
+          <div class="swiper-slide"><img src="img/Scream4.jpg" alt="Pânico 4"></div>
           <div class="swiper-slide"><img src="img/Scream5.jpeg" alt="Pânico 5 "></div>
           <div class="swiper-slide"><img src="img/ScreamVI.jpeg" alt="Pânico 6"></div>
         </div>
