--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
           </div>
           <div class="swiper-slide"><img src="img/Scream4.jpg" alt="Pânico 4"></div>
           <div class="swiper-slide"><img src="img/Scream5.jpeg" alt="Pânico 5 "></div>
-          <div class="swiper-slide"><img src="img/ScreamVI.jpeg" alt="Pânico 6"></div>
+          <div class="swiper-slide"><img src="img/Scream6.jpg" alt="Pânico 6"></div>
         </div>
 
         <!-- If we need navigation buttons -->
