--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
           <div class="swiper-slide"><img src="img/Scream3.jpeg" alt="Pânico 3">
           </div>
           <div class="swiper-slide"><img src="img/Scream4.jpg" alt="Pânico 4"></div>
-          <div class="swiper-slide"><img src="img/Scream5.jpeg" alt="Pânico 5 "></div>
+          <div class="swiper-slide"><img src="img/Scream5.png" alt="Pânico 5 "></div>
           <div class="swiper-slide"><img src="img/Scream6.jpg" alt="Pânico 6"></div>
         </div>
 
