--- a/index.html
+++ b/index.html
@@ -162,14 +162,14 @@
 
         <div class="swiper-wrapper">
           <!-- Slides -->
-          <div class="swiper-slide"><img src="img/Scream.jpeg"
+          <div class="swiper-slide"><img src="img/Scream.jpg"
               alt="Pânico 1"></div>
           <div class="swiper-slide"><img src="img/Scream2.jpg" alt="Pânico 2">
           </div>
-          <div class="swiper-slide"><img src="img/Scream3.jpeg" alt="Pânico 3">
+          <div class="swiper-slide"><img src="img/Scream3.jpg" alt="Pânico 3">
           </div>
           <div class="swiper-slide"><img src="img/Scream4.jpg" alt="Pânico 4"></div>
-          <div class="swiper-slide"><img src="img/Scream5.png" alt="Pânico 5 "></div>
+          <div class="swiper-slide"><img src="img/Scream5.jpg" alt="Pânico 5 "></div>
           <div class="swiper-slide"><img src="img/Scream6.jpg" alt="Pânico 6"></div>
         </div>
 
