--- a/index.html
+++ b/index.html
@@ -184,10 +184,10 @@
           <!-- 1º coluna -->
           <div class="descrição">
             <img src="img/Estrelinhas.svg" alt="Avaliação 5 estrelas">
-            <h3 class="descrição__titulo">Autora do Mês</h3>
-            <h2 class="descrição__titulo-livro">Juliana Agarikov</h2>
-            <p class="descrição__texto">Analista de sistemas e escritora, Juliana é especialista em
-              Front-End.
+            <h3 class="descrição__titulo">Melhor Personagem</h3>
+            <h2 class="descrição__titulo-livro">Ghostface</h2>
+            <p class="descrição__texto">Ghostface, é o antagonista na trilogia de Pânico. 
+              Ele é um assassino em série que sempre tenta matar Sidney Prescott e seus amigos. 
             </p>
           </div>
           <!-- 2º coluna -->
