--- a/index.html
+++ b/index.html
@@ -186,12 +186,12 @@
             <img src="img/Estrelinhas.svg" alt="Avaliação 5 estrelas">
             <h3 class="descrição__titulo">Melhor Personagem</h3>
             <h2 class="descrição__titulo-livro">Ghostface</h2>
-            <p class="descrição__texto">Ghostface, é o antagonista na trilogia de Pânico. 
+            <p class="descrição__texto">Ghostface, é o antagonista nos filmes de Pânico. 
               Ele é um assassino em série que sempre tenta matar Sidney Prescott e seus amigos. 
             </p>
           </div>
           <!-- 2º coluna -->
-          <img src="img/Escritora.svg" class="descrição__imagem">
+          <img src="img/Ghostface.jpg" class="descrição__imagem">
         </div>
 
         <!-- 2º linha -->
