--- a/index.html
+++ b/index.html
@@ -101,20 +101,20 @@
         <!-- Additional required wrapper -->
         <div class="swiper-wrapper">
           <!-- Slides -->
-          <div class="swiper-slide"><img src="img/Apachekafka.svg"
+          <div class="swiper-slide"><img src="img/ClubeDaLuta.jpg"
               alt="Livro sobre apache kafka e spring boot da alura books"></div>
-          <div class="swiper-slide"><img src="img/Liderança.svg"
+          <div class="swiper-slide"><img src="img/Drive.jpg"
               alt="Livro sobre liderança em design design da alura books"></div>
-          <div class="swiper-slide"><img src="img/Javascript.svg" alt="Livro sobre javascript assertivo da alura books">
+          <div class="swiper-slide"><img src="img/PsicopataAmericano.jpg" alt="Livro sobre javascript assertivo da alura books">
           </div>
           <div class="swiper-slide">
-            <img src="img/Guia Front-end.svg" alt="Livro Guia front end" />
+            <img src="img/TokyoDrift.jpg" alt="Livro Guia front end" />
           </div>
           <div class="swiper-slide">
-            <img src="img/Portugol.svg" alt="Livro sobre portugol" />
+            <img src="img/InterStelar.jpg" alt="Livro sobre portugol" />
           </div>
           <div class="swiper-slide">
-            <img src="img/Acessibilidade.svg" alt="Livro sobre acessibilidade" />
+            <img src="img/Ultimato.jpg" alt="Livro sobre acessibilidade" />
           </div>
         </div>
 
