--- a/index.html
+++ b/index.html
@@ -102,19 +102,19 @@
         <div class="swiper-wrapper">
           <!-- Slides -->
           <div class="swiper-slide"><img src="img/ClubeDaLuta.jpg"
-              alt="Livro sobre apache kafka e spring boot da alura books"></div>
+              alt="Filme Clube da luta"></div>
           <div class="swiper-slide"><img src="img/Drive.jpg"
-              alt="Livro sobre liderança em design design da alura books"></div>
-          <div class="swiper-slide"><img src="img/PsicopataAmericano.jpg" alt="Livro sobre javascript assertivo da alura books">
+              alt="Filme Drive"></div>
+          <div class="swiper-slide"><img src="img/PsicopataAmericano.jpg" alt="Filme Psicopata Americano">
           </div>
           <div class="swiper-slide">
-            <img src="img/TokyoDrift.jpg" alt="Livro Guia front end" />
+            <img src="img/TokyoDrift.jpg" alt="Filme Tokyo drift" />
           </div>
           <div class="swiper-slide">
-            <img src="img/InterStelar.jpg" alt="Livro sobre portugol" />
+            <img src="img/InterStelar.jpg" alt="Filme InterStelar" />
           </div>
           <div class="swiper-slide">
-            <img src="img/Ultimato.jpg" alt="Livro sobre acessibilidade" />
+            <img src="img/Ultimato.jpg" alt="Filme Ultimato" />
           </div>
         </div>
 
