--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <h3 class="descrição__titulo">Talvez você também se interesse por...</h3>
             <h2 class="descrição__titulo-livro">Angular 11 e Firebase</h2>
             <p class="descrição__texto">
-              Construindo uma aplicação integrada com a plataforma do Google.
+              Construindo uma aplicação integrada com a plataforma do Google..
             </p>
           </div>
           <img src="img/Angular.svg" class="descrição__imagem" />
