--- a/index.html
+++ b/index.html
@@ -128,12 +128,13 @@
         <div class="card__descrição">
           <div class="descrição">
             <h3 class="descrição__titulo">Talvez você também se interesse por...</h3>
-            <h2 class="descrição__titulo-livro">Angular 11 e Firebase</h2>
+            <h2 class="descrição__titulo-livro">Coringa</h2>
             <p class="descrição__texto">
-              Construindo uma aplicação integrada com a plataforma do Google..
+              Arthur Fleck, um comediante frustrado e marginalizado, se transforma em criminoso após matar três homens no metrô.
+              Esse crime provoca um movimento contra a elite de Gotham City, com Thomas Wayne sendo um dos principais representantes dessa elite.
             </p>
           </div>
-          <img src="img/Angular.svg" class="descrição__imagem" />
+          <img src="img/Coringa.jpg" class="descrição__imagem" />
         </div>
         <div class="card__botões">
           <ul class="botões">
