--- a/index.html
+++ b/index.html
@@ -130,8 +130,7 @@
             <h3 class="descrição__titulo">Talvez você também se interesse por...</h3>
             <h2 class="descrição__titulo-livro">Coringa</h2>
             <p class="descrição__texto">
-              Arthur Fleck, um comediante frustrado e marginalizado, se transforma em criminoso após matar três homens no metrô.
-              Esse crime provoca um movimento contra a elite de Gotham City, com Thomas Wayne sendo um dos principais representantes dessa elite.
+              Arthur Fleck, um comediante frustrado, se torna criminoso ao matar três homens no metrô, o que dá início a um movimento contra a elite de Gotham City, incluindo Thomas Wayne.
             </p>
           </div>
           <img src="img/Coringa.jpg" class="descrição__imagem" />
