--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <h3 class="descrição__titulo">Talvez você também se interesse por...</h3>
             <h2 class="descrição__titulo-livro">Coringa</h2>
             <p class="descrição__texto">
-              Arthur Fleck, um comediante frustrado, se torna criminoso ao matar três homens no metrô, o que dá início a um movimento contra a elite de Gotham City, incluindo Thomas Wayne.
+              Arthur Fleck, um comediante frustrado, se torna criminoso ao matar três homens no metrô, dando início a um movimento contra a elite de Gotham City, incluindo Thomas Wayne.
             </p>
           </div>
           <img src="img/Coringa.jpg" class="descrição__imagem" />
