--- a/index.html
+++ b/index.html
@@ -215,25 +215,25 @@
     <ul class="tópicos__lista">
       <li class="tópicos__item"><a href="#" class="tópicos__link">Android</a></li>
       <li class="tópicos__item">
-        <a href="#" class="tópicos__link">Marketing Digital</a>
+        <a href="#" class="tópicos__link">Ação</a>
       </li>
       <li class="tópicos__item">
-        <a href="#" class="tópicos__link">Agile</a>
+        <a href="#" class="tópicos__link">Terror</a>
       </li>
       <li class="tópicos__item">
-        <a href="#" class="tópicos__link">Startups</a>
+        <a href="#" class="tópicos__link">Suspense</a>
       </li>
       <li class="tópicos__item">
-        <a href="#" class="tópicos__link">HTML & CSS</a>
+        <a href="#" class="tópicos__link">Ficção Científica</a>
       </li>
       <li class="tópicos__item">
-        <a href="#" class="tópicos__link">Python</a>
+        <a href="#" class="tópicos__link">Aventura</a>
       </li>
       <li class="tópicos__item">
-        <a href="#" class="tópicos__link">OO</a>
+        <a href="#" class="tópicos__link">Thriller</a>
       </li>
       <li class="tópicos__item">
-        <a href="#" class="tópicos__link">Java</a>
+        <a href="#" class="tópicos__link">Crime</a>
       </li>
     </ul>
   </section>
