--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
   <section class="tópicos">
     <h2 class="tópicos__titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
     <ul class="tópicos__lista">
-      <li class="tópicos__item"><a href="#" class="tópicos__link">Android</a></li>
+      <li class="tópicos__item"><a href="#" class="tópicos__link">Comédia</a></li>
       <li class="tópicos__item">
         <a href="#" class="tópicos__link">Ação</a>
       </li>
