--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
       <ul class="lista-menu">
         <li class="lista-menu__titulo">Categorias</li>
         <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">Programação</a>
+          <a href="#" class="lista-menu__link">Ação</a>
         </li>
         <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">Front-end</a>
+          <a href="#" class="lista-menu__link">Terror</a>
         </li>
         <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">Infraestrutura</a>
+          <a href="#" class="lista-menu__link">Suspense</a>
         </li>
         <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">Business</a>
+          <a href="#" class="lista-menu__link">Aventura</a>
         </li>
         <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">Design & UX</a>
+          <a href="#" class="lista-menu__link">Ficção científica</a>
         </li>
       </ul>
       <img src="img/Logo.svg" alt="Logo do site" class="container__imagem">
@@ -87,7 +87,7 @@
   <section class="banner">
     <h2 class="banner__titulo">Já sabe por onde começar?</h2>
     <p class="banner__texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
-    <input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima leitura?">
+    <input type="search" class="banner__pesquisa" placeholder="Qual será seu próximo filme?">
   </section>
 
   <section class="carrossel">
@@ -130,7 +130,7 @@
             <h3 class="descrição__titulo">Talvez você também se interesse por...</h3>
             <h2 class="descrição__titulo-livro">Coringa</h2>
             <p class="descrição__texto">
-              Arthur Fleck, um comediante frustrado, se torna criminoso ao matar três homens no metrô, dando início a um movimento contra a elite de Gotham City, incluindo Thomas Wayne.
+              Arthur Fleck, um comediante frustrado, se torna criminoso, dando início a um movimento contra a elite de Gotham City, incluindo Thomas Wayne.
             </p>
           </div>
           <img src="img/Coringa.jpg" class="descrição__imagem" />
